[package]
name = "crypto_wallet_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.1.0"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono", "uuid"] }
env_logger = "0.9.0"
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"
rand = "0.8.4"
serde = {version = "1.0.82", features = ["derive"]}
serde_json = "1.0.51"
uuid = { version = "1.1.2", features = ["serde", "v4"] }